force-app/main/default/objects/DepositOffset__c/fields/AmountDepOffIncludeTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountDepOffIncludeTaxLocal__c</fullName>
    <label>AMOUNT DEP OFF INCLUDE TAX(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>