force-app/main/default/objects/DepositOffset__c/fields/AmountDepOffIncludeTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>AmountDepOffIncludeTaxUSD__c</fullName>
    <label>AMOUNT DEP OFF INCLUDE TAX(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>