force-app/main/default/objects/DepositOffset__c/fields/AmountOfTaxDepositOffsetLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountOfTaxDepositOffsetLocal__c</fullName>
    <label>AMOUNT OF TAX-DEP OFF(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>