force-app/main/default/objects/DepositOffset__c/fields/ClosingBalance__c.field-meta.xml
<CustomField>
    <fullName>ClosingBalance__c</fullName>
    <label>CLOSING BALANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>