force-app/main/default/objects/DepositOffset__c/fields/ClosingBalanceUSD__c.field-meta.xml
<CustomField>
    <fullName>ClosingBalanceUSD__c</fullName>
    <label>CLOSING BALANCE(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>