force-app/main/default/objects/DepositOffset__c/fields/DepositID__c.field-meta.xml
<CustomField>
    <fullName>DepositID__c</fullName>
    <label>DEPOSIT ID</label>
    <referenceTo>Deposit__c</referenceTo>
    <relationshipLabel>DEPOSIT OFFSET</relationshipLabel>
    <relationshipName>DepositOffset</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>