force-app/main/default/objects/DepositOffset__c/fields/DepositOffsetAmount__c.field-meta.xml
<CustomField>
    <fullName>DepositOffsetAmount__c</fullName>
    <label>DEPOSIT OFFSET AMOUNT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>