force-app/main/default/objects/DepositOffset__c/fields/DepositOffsetAmountSellingLocal__c.field-meta.xml
<CustomField>
    <fullName>DepositOffsetAmountSellingLocal__c</fullName>
    <label>DEPOSIT OFFSET AMOUNT-SELLING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>