force-app/main/default/objects/DepositOffset__c/fields/DepositOffsetAmountUSD__c.field-meta.xml
<CustomField>
    <fullName>DepositOffsetAmountUSD__c</fullName>
    <label>DEPOSIT OFFSET AMOUNT(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>