force-app/main/default/objects/DepositOffset__c/fields/OpeningBalance__c.field-meta.xml
<CustomField>
    <fullName>OpeningBalance__c</fullName>
    <label>OPENING BALANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>