force-app/main/default/objects/DepositOffset__c/fields/RollupFMSUnreceivedBalOfSellLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupFMSUnreceivedBalOfSellLocal__c</fullName>
    <label>ROLLUP FMS UNRECEIVED BAL OF SELL(LOCAL)</label>
    <summarizedField>ConnectDepositOffsetInvoicing__c.FMSUnreceivedBalOfSellingLocal__c</summarizedField>
    <summaryForeignKey>ConnectDepositOffsetInvoicing__c.DepositOffsetID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>