force-app/main/default/objects/DepositOffset__c/fields/RollupWMSUnpaidBalOfBuyingLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupWMSUnpaidBalOfBuyingLocal__c</fullName>
    <label>ROLLUP WMS UNPAID BAL OF BUY(LOCAL)</label>
    <summarizedField>ConnectDepositOffsetBilling__c.WMSUnpaidBalOfBuyingLocal__c</summarizedField>
    <summaryForeignKey>ConnectDepositOffsetBilling__c.DepositOffsetID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>