force-app/main/default/objects/DepositOffset__c/fields/RollupWMSUnpaidBalOfBuyingUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupWMSUnpaidBalOfBuyingUSD__c</fullName>
    <label>ROLLUP WMS UNPAID BAL OF BUY(USD)</label>
    <summarizedField>ConnectDepositOffsetBilling__c.WMSUnpaidBalOfBuyingUSD__c</summarizedField>
    <summaryForeignKey>ConnectDepositOffsetBilling__c.DepositOffsetID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>