force-app/main/default/objects/DepositOffset__c/fields/RollupWMSUnreceivedBalOfSelLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupWMSUnreceivedBalOfSelLocal__c</fullName>
    <label>ROLLUP WMS UNRECEIVED BAL OF SELL(LOCAL)</label>
    <summarizedField>ConnectDepositOffsetBilling__c.WMSUnreceivedBalOfSellingLocal__c</summarizedField>
    <summaryForeignKey>ConnectDepositOffsetBilling__c.DepositOffsetID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>