force-app/main/default/objects/DepositOffset__c/fields/RollupWMSUnreceivedBalOfSellUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupWMSUnreceivedBalOfSellUSD__c</fullName>
    <label>ROLLUP WMS UNRECEIVED BAL OF SELL(USD)</label>
    <summarizedField>ConnectDepositOffsetBilling__c.WMSUnreceivedBalOfSellingUSD__c</summarizedField>
    <summaryForeignKey>ConnectDepositOffsetBilling__c.DepositOffsetID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>