force-app/main/default/objects/DepositOffset__c/recordTypes/OffsetDepositFromCustomer.recordType-meta.xml
<RecordType>
    <fullName>OffsetDepositFromCustomer</fullName>
    <active>true</active>
    <label>Offset Deposit From Customer</label>
</RecordType>