force-app/main/default/objects/DepositOffset__c/recordTypes/OffsetDepositFromCustomerUSD.recordType-meta.xml
<RecordType>
    <fullName>OffsetDepositFromCustomerUSD</fullName>
    <active>true</active>
    <label>Offset Deposit From Customer-USD Currency</label>
</RecordType>