force-app/main/default/objects/DepositOffset__c/recordTypes/OffsetForDepositTo3rdParty.recordType-meta.xml
<RecordType>
    <fullName>OffsetForDepositTo3rdParty</fullName>
    <active>true</active>
    <label>Offset For Deposit To 3rd Party</label>
</RecordType>