force-app/main/default/objects/DepositOffset__c/recordTypes/OffsetForDepositTo3rdPartyUSD.recordType-meta.xml
<RecordType>
    <fullName>OffsetForDepositTo3rdPartyUSD</fullName>
    <active>true</active>
    <label>Offset For Deposit To 3rd Party-USD Currency</label>
</RecordType>