force-app/main/default/objects/DepositOffset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DepositOffsetName__c</columns>
    <columns>DepositID__c</columns>
    <columns>PreviousDepositOffsetID__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>DepositOffsetAmount__c</columns>
    <columns>OffsetDate__c</columns>
    <columns>AccountedDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>